--- a/src/main/resources/templates/subjects.html
+++ b/src/main/resources/templates/subjects.html
@@ -6,35 +6,79 @@
 
 </head>
 <body><!--/*/ <th:block th:include="fragments/navbar :: nav"></th:block> /*/-->
-<div class="row"><!--/*/ <th:block th:include="fragments/sidebar :: sidebar"></th:block> /*/-->
-    <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3" th:with="colnum=0" >
-        <h1><i class="fa fa-book fa-fw"></i> Wszystkie przedmioty</h1>
-        <div class="row">
-            <div class="col-lg-6 col-md-12" th:each="subject : ${subjects}">
-                <div class="card" th:classappend="'card-outline-'+${subject.colour}">
-                    <div class="card-block text-white" th:classappend="'card-'+${subject.colour}">
-                        <span class="h4" th:text="${subject.name}"></span>
-                        <span class="float-right">
-                            <a href="#"><i class="fa fa-pencil text-white" aria-hidden="true"></i> </a>
-                            <i>&nbsp;</i>
-                            <a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i> </a>
-                        </span>
-                    </div>
-                    <ul class="list-group list-group-flush" th:classappend="'text-'+${subject.colour}">
-                        <li class="list-group-item justify-content-between" th:each="lesson : ${subject.lessons}">
-                            <th:block th:text="${subject.name}+' - '"></th:block>
+<div class="container-fluid">
+    <div class="row"><!--/*/ <th:block th:include="fragments/sidebar :: sidebar"></th:block> /*/-->
+        <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3" >
+            <h1><i class="fa fa-book fa-fw"></i> Wszystkie przedmioty</h1>
+            <div class="row" th:each="subjectChunks : ${T(com.google.common.collect.Lists).partition(subjects,2)}">
+                <div class="col-lg-5 col-md-10" th:each="subject : ${subjectChunks}">
+                    <div class="card" th:classappend="'card-outline-'+${subject.colour}">
+                        <div class="card-block text-white" th:classappend="'card-'+${subject.colour}">
+                            <span class="h4" th:text="${subject.name}"></span>
                             <span class="float-right">
-                                <a href="#"><i class="fa fa-pencil" th:classappend="'text-'+${subject.colour}" aria-hidden="true"></i> </a>
+                            <a href="#"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a>
+                            <i>&nbsp;</i>
+                            <a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a>
+                        </span>
+                        </div>
+                        <ul class="list-group list-group-flush" th:classappend="'text-'+${subject.colour}">
+                            <li class="list-group-item justify-content-between" th:each="lesson : ${subject.lessons}">
+                                <th:block th:text="${subject.name}+' - '+${lesson.lessonType.nazwa}"></th:block>
+                                <span class="float-right">
+                                <a href="#"><i class="fa fa-pencil" th:classappend="'text-'+${subject.colour}" aria-hidden="true"></i></a>
                                 <i>&nbsp;</i>
-                                <a href="#"><i class="fa fa-trash-o" th:classappend="'text-'+${subject.colour}" aria-hidden="true"></i> </a>
+                                <a href="#" th:href="${'/lesson/delete/'+lesson.id}"><i class="fa fa-trash-o" th:classappend="'text-'+${subject.colour}" aria-hidden="true"></i></a>
                             </span>
-                        </li>
-                    </ul>
+                            </li>
+                        </ul>
+                        <div class="card-block">
+                            <button type="button" class="btn btn-primary" data-toggle="modal" th:attr="data-target='#lessonModal'+${subject.id}">Dodaj Zajęcia</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <!-- Modal -->
+        <div th:each="subject : ${subjects}" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true" th:attr="id='lessonModal'+${subject.id}">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" th:text="'Dodaj zajęcia do przedmiotu: '+${subject.name}"></h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <form th:object="${lesson}" th:action="@{/lesson}" method="post">
+                        <div class="modal-body">
+                            <input type="hidden" th:field="*{id}"/>
+                            <input type="hidden" th:value="${subject.id}" th:attr="name='subject'"/>
+                            <div class="form-group">
+                                <label th:attr="for='type-select'+${subject.id}">Rodzaj zajęć</label>
+                                <select class="form-control" th:attr="id='type-select'+${subject.id}" th:field="*{lessonType}" >
+                                    <option th:each="lessonType : ${lessonTypes}"
+                                            th:value="${lessonType.id}"
+                                            th:text="${lessonType.nazwa}">Wireframe</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label th:attr="for='teacher-select'+${subject.id}">Wykładowca</label>
+                                <select class="form-control" th:attr="id='teacher-select'+${subject.id}" th:field="*{teacher}">
+                                    <option th:each="teacher : ${teachers}"
+                                            th:value="${teacher.id}"
+                                            th:text="${teacher.name}+' '+${teacher.surname}"></option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn-secondary btn" data-dismiss="modal">Zamknij</button>
+                            <button type="submit" class="btn btn-primary">Zapisz</button>
+                        </div>
+                    </form>
+
                 </div>
             </div>
         </div>
-        <h1 th:text="${colnum}"></h1>
-    </main>
+    </div>
 </div>
 </body>
 </html>
