Improved subjects and lessons list, added lesson edit form.

--- a/src/main/resources/templates/fragments/headinc.html
+++ b/src/main/resources/templates/fragments/headinc.html
@@ -10,11 +10,11 @@
           th:href="@{/webjars/bootstrap/4.0.0-alpha.6-1/css/bootstrap.min.css}"
           rel="stylesheet" media="screen" />
     <link href="../../static/css/colors.css"
-          th:href="@{css/colors.css}" rel="stylesheet"/>
+          th:href="@{/css/colors.css}" rel="stylesheet"/>
     <link href="../../static/css/dashboard.css"
-          th:href="@{css/dashboard.css}" rel="stylesheet"/>
+          th:href="@{/css/dashboard.css}" rel="stylesheet"/>
     <link href="../../static/css/font-awesome.min.css"
-          th:href="@{css/font-awesome.min.css}" rel="stylesheet" type="text/css"/>
+          th:href="@{/css/font-awesome.min.css}" rel="stylesheet" type="text/css"/>
 
     <script src="http://cdn.jsdelivr.net/webjars/jquery/3.2.1/jquery.min.js"
             th:src="@{/webjars/jquery/3.2.1/jquery.min.js}"></script>
