--- a/src/main/resources/templates/subjects.html
+++ b/src/main/resources/templates/subjects.html
@@ -22,13 +22,21 @@
                         </span>
                         </div>
                         <ul class="list-group list-group-flush" th:classappend="'text-'+${subject.colour}">
-                            <li class="list-group-item justify-content-between" th:each="lesson : ${subject.lessons}">
-                                <th:block th:text="${subject.name}+' - '+${lesson.lessonType.nazwa}"></th:block>
+                            <li class="list-group-item justify-content-between" th:each="lesson : ${subject.lessons}" th:switch="${lesson.weekDay}">
+                                <span class="float-left"><th:block th:text="${subject.name}+' - '+${lesson.lessonType.nazwa}"></th:block>
+                                    <small class="text-muted" th:case="2" th:text="'&nbsp;Poniedziałek - '+${lesson.start_hour}+'/'+${lesson.teacher.name}+' '+${lesson.teacher.surname}+'/'+${lesson.room.roomNumber}+' ('+${lesson.room.building}+')'"></small>
+                                    <small class="text-muted" th:case="3" th:text="'&nbsp;Wtorek - '+${lesson.start_hour}+'/'+${lesson.teacher.name}+' '+${lesson.teacher.surname}+'/'+${lesson.room.roomNumber}+' ('+${lesson.room.building}+')'"></small>
+                                    <small class="text-muted" th:case="4" th:text="'&nbsp;Środa - '+${lesson.start_hour}+'/'+${lesson.teacher.name}+' '+${lesson.teacher.surname}+'/'+${lesson.room.roomNumber}+' ('+${lesson.room.building}+')'"></small>
+                                    <small class="text-muted" th:case="5" th:text="'&nbsp;Czwartek - '+${lesson.start_hour}+'/'+${lesson.teacher.name}+' '+${lesson.teacher.surname}+'/'+${lesson.room.roomNumber}+' ('+${lesson.room.building}+')'"></small>
+                                    <small class="text-muted" th:case="6" th:text="'&nbsp;Piątek - '+${lesson.start_hour}+'/'+${lesson.teacher.name}+' '+${lesson.teacher.surname}+'/'+${lesson.room.roomNumber}+' ('+${lesson.room.building}+')'"></small>
+                                    <small class="text-muted" th:case="*" th:text="'WTF? - '+${lesson.start_hour}+'/'+${lesson.teacher.name}+' '+${lesson.teacher.surname}+'/'+${lesson.room.roomNumber}+' ('+${lesson.room.building}+')'"></small>
+                                </span>
                                 <span class="float-right">
-                                <a href="#"><i class="fa fa-pencil" th:classappend="'text-'+${subject.colour}" aria-hidden="true"></i></a>
-                                <i>&nbsp;</i>
-                                <a href="#" th:href="${'/lesson/delete/'+lesson.id}"><i class="fa fa-trash-o" th:classappend="'text-'+${subject.colour}" aria-hidden="true"></i></a>
-                            </span>
+                                    <a href="#" th:href="${'/lesson/edit/'+lesson.id}"><i class="fa fa-pencil" th:classappend="'text-'+${subject.colour}" aria-hidden="true"></i></a>
+                                    <i>&nbsp;</i>
+                                    <a href="#" th:href="${'/lesson/delete/'+lesson.id}"><i class="fa fa-trash-o" th:classappend="'text-'+${subject.colour}" aria-hidden="true"></i></a>
+                                </span>
+
                             </li>
                         </ul>
                         <div class="card-block">
@@ -62,10 +70,18 @@
                             </div>
                             <div class="form-group">
                                 <label th:attr="for='teacher-select'+${subject.id}">Wykładowca</label>
-                                <select class="form-control" th:attr="id='teacher-select'+${subject.id}" th:field="*{teacher}">
+                                <select class="form-control" th:attr="id='teacher-select'+${subject.id}" th:field="*{teacher}" >
                                     <option th:each="teacher : ${teachers}"
                                             th:value="${teacher.id}"
-                                            th:text="${teacher.name}+' '+${teacher.surname}"></option>
+                                            th:text="${teacher.name}+' '+${teacher.surname}">Wireframe</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label th:attr="for='room-select'+${subject.id}">Sala</label>
+                                <select class="form-control" th:attr="id='room-select'+${subject.id}" th:field="*{room}">
+                                    <option th:each="room : ${rooms}"
+                                            th:value="${room.id}"
+                                            th:text="${room.roomNumber}+'/'+${room.building}"></option>
                                 </select>
                             </div>
                             <div class="row">
@@ -76,6 +92,16 @@
                                 <div class="col-6">
                                     <label th:attr="for='start_time_'+${subject.id}">Godzina rozpoczęcia</label>
                                     <input class="form-control" type="time" th:attr="id='start_time_'+${subject.id}" th:field="*{start_hour}"/>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-6">
+                                    <label th:attr="for='end_date_'+${subject.id}">Data zakończenia</label>
+                                    <input class="form-control" type="date" th:attr="id='end_date_'+${subject.id}" th:field="*{end_date}"/>
+                                </div>
+                                <div class="col-6">
+                                    <label th:attr="for='end_time_'+${subject.id}">Godzina zakończenia</label>
+                                    <input class="form-control" type="time" th:attr="id='end_time_'+${subject.id}" th:field="*{end_hour}"/>
                                 </div>
                             </div>
                         </div>
