--- a/src/main/resources/templates/subjects.html
+++ b/src/main/resources/templates/subjects.html
@@ -12,16 +12,17 @@
             <h1><i class="fa fa-book fa-fw"></i> Wszystkie przedmioty</h1>
             <div class="row" th:each="subjectChunks : ${T(com.google.common.collect.Lists).partition(subjects,2)}">
                 <div class="col-lg-5 col-md-10" th:each="subject : ${subjectChunks}">
-                    <div class="card" th:classappend="'card-outline-'+${subject.colour}">
-                        <div class="card-block text-white" th:classappend="'card-'+${subject.colour}">
+                    <div class="card" th:classappend="'card-outline-'+${subject.colour.name}">
+                        <div class="card-block text-white" th:classappend="'card-'+${subject.colour.name}">
                             <span class="h4" th:text="${subject.name}"></span>
                             <span class="float-right">
-                            <a href="#"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a>
+                            <a href="#" th:href="${'/subject/edit/'+subject.id}"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a>
                             <i>&nbsp;</i>
+                                <!-- TODO: usuwanie najpierw wszystkich zajęć wewn. przedmiotu a dopiero potem przedmiotu -->
                             <a href="#" th:href="${'/subject/delete/'+subject.id}"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a>
                         </span>
                         </div>
-                        <ul class="list-group list-group-flush" th:classappend="'text-'+${subject.colour}">
+                        <ul class="list-group list-group-flush" th:classappend="'text-'+${subject.colour.name}">
                             <li class="list-group-item justify-content-between" th:each="lesson : ${subject.lessons}" th:switch="${lesson.weekDay}">
                                 <span class="float-left"><th:block th:text="${subject.name}+' - '+${lesson.lessonType.nazwa}"></th:block>
                                     <small class="text-muted" th:case="2" th:text="'&nbsp;Poniedziałek - '+${lesson.start_hour}+'/'+${lesson.teacher.name}+' '+${lesson.teacher.surname}+'/'+${lesson.room.roomNumber}+' ('+${lesson.room.building}+')'"></small>
@@ -32,9 +33,9 @@
                                     <small class="text-muted" th:case="*" th:text="'WTF? - '+${lesson.start_hour}+'/'+${lesson.teacher.name}+' '+${lesson.teacher.surname}+'/'+${lesson.room.roomNumber}+' ('+${lesson.room.building}+')'"></small>
                                 </span>
                                 <span class="float-right">
-                                    <a href="#" th:href="${'/lesson/edit/'+lesson.id}"><i class="fa fa-pencil" th:classappend="'text-'+${subject.colour}" aria-hidden="true"></i></a>
+                                    <a href="#" th:href="${'/lesson/edit/'+lesson.id}"><i class="fa fa-pencil" th:classappend="'text-'+${subject.colour.name}" aria-hidden="true"></i></a>
                                     <i>&nbsp;</i>
-                                    <a href="#" th:href="${'/lesson/delete/'+lesson.id}"><i class="fa fa-trash-o" th:classappend="'text-'+${subject.colour}" aria-hidden="true"></i></a>
+                                    <a href="#" th:href="${'/lesson/delete/'+lesson.id}"><i class="fa fa-trash-o" th:classappend="'text-'+${subject.colour.name}" aria-hidden="true"></i></a>
                                 </span>
 
                             </li>
@@ -45,8 +46,11 @@
                     </div>
                 </div>
             </div>
+            <button class="btn-primary btn" type="button" data-toggle="modal" data-target="#subjectModal">
+                Dodaj Przedmiot
+            </button>
         </main>
-        <!-- Modal -->
+        <!-- Modal (dodawanie zajęć do przedmiotu) -->
         <div th:each="subject : ${subjects}" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true" th:attr="id='lessonModal'+${subject.id}">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -104,6 +108,42 @@
                                     <input class="form-control" type="time" th:attr="id='end_time_'+${subject.id}" th:field="*{end_hour}"/>
                                 </div>
                             </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn-secondary btn" data-dismiss="modal">Zamknij</button>
+                            <button type="submit" class="btn btn-primary">Zapisz</button>
+                        </div>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+        <!-- Modal (dodawanie przedmiotu) -->
+        <div class="modal fade" tabindex="-1" role="dialog" aria-hidden="true" th:attr="id='subjectModal'">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" th:text="'Dodaj przedmiot'"></h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <form th:object="${subject}" th:action="@{/subject}" method="post">
+                        <div class="modal-body">
+                            <input type="hidden" th:field="*{id}"/>
+                            <div class="form-group">
+                                <label th:attr="for='subject-name'+${subject.id}">Nazwa przedmiotu</label>
+                                <input class="form-control" type="text" value="Nazwa przemiotu" th:field="*{name}"/>
+                            </div>
+                            <fieldset class="form-group">
+                                <legend>Kolor przedmiotu</legend>
+                                <div class="form-check">
+                                    <label th:each="colour : ${colours}" class="form-check-label">
+                                        <input type="radio" class="form-check-input" name="colorRadios" th:attr="id='colour-'+${colour.name}" th:field="*{colour}" th:value="${colour.id}"/>
+                                        <p th:classappend="'bg-'+${colour.name}">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+                                    </label>
+                                </div>
+                            </fieldset>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn-secondary btn" data-dismiss="modal">Zamknij</button>
